--- a/snowflake/manifest.json
+++ b/snowflake/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2.0.0",
   "app_uuid": "23e9084d-5801-4a71-88fe-f62b7c1bb289",
   "app_id": "snowflake",
-  "display_on_public_website": true,
+  "display_on_public_website": false,
   "tile": {
     "overview": "README.md#Overview",
     "configuration": "README.md#Setup",
