fix default type

--- a/win32_event_log/assets/configuration/spec.yaml
+++ b/win32_event_log/assets/configuration/spec.yaml
@@ -96,7 +96,7 @@ files:
         The `dd_security_events` option cannot be used with the `path` option.
       value:
         type: string
-        display_default: None
+        display_default:
         example: high
         enum:
         - high
