--- a/sqlserver/assets/configuration/spec.yaml
+++ b/sqlserver/assets/configuration/spec.yaml
@@ -731,7 +731,7 @@ files:
             example: 600
         - name: max_execution_time
           description: |
-            Set the maximum time for schema collection (in seconds). Defaults to 10 seconds. Capped by `collection_interval`
+            Set the maximum time for schema collection (in seconds). Defaults to 10 seconds. Capped by `schemas_collection.collection_interval`
           value:
             type: number
             example: 10
