Provide CODECOV_TOKEN as env var to Upload coverage data job

--- a/.github/workflows/test-target.yml
+++ b/.github/workflows/test-target.yml
@@ -272,3 +272,5 @@ jobs:
       with:
         files: "${{ inputs.target }}/coverage.xml"
         flags: "${{ inputs.target }}"
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
