--- a/agent_requirements.in
+++ b/agent_requirements.in
@@ -93,7 +93,8 @@ requests-ntlm==1.2.0; python_version > '3.0'
 requests-oauthlib==1.3.1; python_version < '3.0'
 requests-oauthlib==2.0.0; python_version > '3.0'
 requests-toolbelt==1.0.0
-requests-unixsocket2==0.4.0
+requests-unixsocket==0.3.0; python_version < '3.0'
+requests-unixsocket2==0.4.0; python_version > '3.0'
 requests==2.27.1; python_version < '3.0'
 requests==2.32.3; python_version > '3.0'
 rethinkdb==2.4.9
