improve variable names

--- a/sqlserver/assets/configuration/spec.yaml
+++ b/sqlserver/assets/configuration/spec.yaml
@@ -715,8 +715,8 @@ files:
         display_default: false
     - name: schemas_collection 
       description: |
-        Configure collection of schemas. "\If database_autodiscovery is not enabled, data is collected 
-        only for the database configured with database."\
+        Configure collection of schemas. If `database_autodiscovery` is not enabled, data is collected 
+        only for the database configured with `database` parameter.
       options:
         - name: enabled
           description: |
