setting use_oneshot to default true

--- a/process/assets/configuration/spec.yaml
+++ b/process/assets/configuration/spec.yaml
@@ -146,5 +146,5 @@ files:
           This can help speed up the check completion.
         value:
           type: boolean
-          example: false
+          example: true
       - template: instances/default
