--- a/.codecov.yml
+++ b/.codecov.yml
@@ -206,6 +206,10 @@ coverage:
         target: 75
         flags:
         - fluentd
+      Fly.io:
+        target: 75
+        flags:
+        - fly_io
       FoundationDB:
         target: 75
         flags:
@@ -574,14 +578,14 @@ coverage:
         target: 75
         flags:
         - teamcity
-      Teleport:
-        target: 75
-        flags:
-        - teleport
       Tekton:
         target: 75
         flags:
         - tekton
+      Teleport:
+        target: 75
+        flags:
+        - teleport
       Temporal:
         target: 75
         flags:
@@ -954,6 +958,11 @@ flags:
     paths:
     - fluxcd/datadog_checks/fluxcd
     - fluxcd/tests
+  fly_io:
+    carryforward: true
+    paths:
+    - fly_io/datadog_checks/fly_io
+    - fly_io/tests
   foundationdb:
     carryforward: true
     paths:
@@ -1409,16 +1418,16 @@ flags:
     paths:
     - teamcity/datadog_checks/teamcity
     - teamcity/tests
-  teleport:
-    carryforward: true
-    paths:
-    - teleport/datadog_checks/teleport
-    - teleport/tests
   tekton:
     carryforward: true
     paths:
     - tekton/datadog_checks/tekton
     - tekton/tests
+  teleport:
+    carryforward: true
+    paths:
+    - teleport/datadog_checks/teleport
+    - teleport/tests
   temporal:
     carryforward: true
     paths:
