--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -292,6 +292,54 @@ files:
           display_default: ['vm', 'host']
           items:
             type: string
+      - name: include_events
+        description: |
+          The events that should be collected by the vSphere integration.
+
+          Each event is an object represented with the event name itself as a key.
+          However, while the keys should be events to include, the value should be an
+          array of event option regexes to exclude/filter out. For example, if the key
+          is 'AlarmStatusChangedEvent' and the values for this key are 'Gray to Green' and 'Green to Gray',
+          then all events name 'AlarmStatusChangedEvent' that don't have the option of 'Gray to Green'
+          and 'Green to Gray' will be included.
+          
+          Currently, events can only be collected from the following resources:
+          VMs, hosts, datacenters, datastores, and clusters.
+
+        value:
+          example:
+            - event: <EVENT_NAME_TO_INCLUDE>
+            - messages:
+                - <EVENT_OPTION_REGEX_CORRESPONDING_TO_EVENT_NAME_TO_EXCLUDE_1>
+                - <EVENT_OPTION_REGEX_CORRESPONDING_TO_EVENT_NAME_TO_EXCLUDE_2>
+          type: array
+          display_default: [['AlarmStatusChangedEvent', [r'Gray to Green', r'Green to Gray']],
+              ['TaskEvent', [
+                r'Initialize powering On',
+                r'Power Off virtual machine',
+                r'Power On virtual machine',
+                r'Reconfigure virtual machine',
+                r'Relocate virtual machine',
+                r'Suspend virtual machine',
+                r'Migrate virtual machine',
+              ]],
+              ['VmBeingHotMigratedEvent', []],
+              ['VmMessageEvent', []],
+              ['VmMigratedEvent', []],
+              ['VmPoweredOnEvent', []],
+              ['VmPoweredOffEvent', []],
+              ['VmReconfiguredEvent', []],
+              ['VmSuspendedEvent', []],
+          ]
+          items:
+            type: object
+            properties:
+              - name: event
+                type: string
+              - name: messages
+                type: array
+                items:
+                  type: string
       - name: collect_tags
         description: |
           If true, the vSphere Tags will be collected.
