--- a/fly_io/manifest.json
+++ b/fly_io/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": "2.0.0",
   "app_uuid": "43885e54-474b-43a8-bb02-ecfc2037b674",
-  "app_id": "fly_io",
+  "app_id": "fly-io",
   "display_on_public_website": false,
   "tile": {
     "overview": "README.md#Overview",
