--- a/fly_io/manifest.json
+++ b/fly_io/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "",
+    "description": "Monitor your Fly.io apps and machines.",
     "title": "Fly.io",
     "media": [],
     "classifier_tags": [
