--- a/fluentd/tests/compose/docker-compose.yaml
+++ b/fluentd/tests/compose/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: '3'
 services:
-
   fluentd:
+    platform: linux/x86_64
     image: fluent/fluentd:${FLUENTD_IMAGE_TAG}
     container_name: ${FLUENTD_CONTAINER_NAME}
     ports:
