--- a/marathon/tests/compose/docker-compose.yml
+++ b/marathon/tests/compose/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 2181:2181
 
   mesos-master:
-    image: mesosphere/mesos-master:1.1.0-2.0.107.ubuntu1404
+    image: mesosphere/mesos-master:1.7.1
     ports:
       - 5050:5050
     environment:
@@ -24,7 +24,7 @@ services:
       - MESOS_REGISTRY=in_memory
 
   mesos-slave:
-    image: mesosphere/mesos-slave:1.1.0-2.0.107.ubuntu1404
+    image: mesosphere/mesos-slave:1.7.1
     ports:
       - 5051:5051
     privileged: true
