--- a/mongo/assets/configuration/spec.yaml
+++ b/mongo/assets/configuration/spec.yaml
@@ -111,9 +111,9 @@ files:
         Required when `dbm` is enabled.
       value:
         type: string
-    - name: reported_hostname
+    - name: reported_database_hostname
       description: |
-        Set the reported hostname for the connected mongodb instance. This value overrides the mongodb hostname 
+        Set the reported database hostname for the connected mongodb instance. This value overrides the mongodb hostname 
         detected by the Agent from mongodb admin command serverStatus. It can be useful to set a custom hostname
         when connecting to a remote database through a proxy.
       value:
