--- a/mongo/datadog_checks/mongo/data/conf.yaml.example
+++ b/mongo/datadog_checks/mongo/data/conf.yaml.example
@@ -84,12 +84,12 @@ instances:
     #   - one_database
     #   - other_database
 
-    ## @param reported_hostname - string - optional
-    ## Set the reported hostname for the connected mongodb instance. This value overrides the mongodb hostname 
+    ## @param reported_database_hostname - string - optional
+    ## Set the reported database hostname for the connected mongodb instance. This value overrides the mongodb hostname 
     ## detected by the Agent from mongodb admin command serverStatus. It can be useful to set a custom hostname
     ## when connecting to a remote database through a proxy.
     #
-    # reported_hostname: <REPORTED_HOSTNAME>
+    # reported_database_hostname: <REPORTED_DATABASE_HOSTNAME>
 
     ## @param replica_check - boolean - optional - default: true
     ## Whether or not to read from available replicas.
