--- a/sophos_central_cloud/manifest.json
+++ b/sophos_central_cloud/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "",
+    "description": "Gain insights into Sophos Central Cloud logs.",
     "title": "sophos-central-cloud",
     "media": [],
     "classifier_tags": [
