--- a/datadog_checks_dev/pyproject.toml
+++ b/datadog_checks_dev/pyproject.toml
@@ -52,7 +52,7 @@ dependencies = [
     "shutilwhich==1.1.0; python_version < '3.0'",
     "six",
     "subprocess32==3.5.4; python_version < '3.0'",
-    "tenacity",
+    "tenacity==8.3.0",
 ]
 dynamic = [
     "version",
