--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -347,6 +347,8 @@ files:
                           - type: boolean
                           - type: object
                             properties:
+                              - name: all_projects
+                                type: boolean
                               - name: limit
                                 description: |
                                   Maximum number of servers to be processed.
