Run py2 workflow on agent-v6 branch

--- a/.github/workflows/nightly-py2.yml
+++ b/.github/workflows/nightly-py2.yml
@@ -2,8 +2,7 @@ name: Nightly Python 2 tests
 
 on:
   schedule:
-  # 4 AM UTC
-  - cron: "0 4 * * *"
+  - cron: "0 4 * * *"  # 4 AM UTC
 
 jobs:
   test:
@@ -15,6 +14,7 @@ jobs:
       standard: true
       test-py2: true
       test-py3: false
+      branch: "agent-v6"
     secrets: inherit
 
   submit-traces:
