--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -47,6 +47,10 @@ on:
         required: false
         default: ""
         type: string
+      branch:
+        required: false
+        default: "master"
+        type: string
 
 jobs:
   jd316aba:
