--- a/.github/workflows/test-target.yml
+++ b/.github/workflows/test-target.yml
@@ -77,6 +77,10 @@ on:
         required: false
         default: ""
         type: string
+      branch:
+        required: false
+        default: "master"
+        type: string
 
 defaults:
   run:
@@ -107,6 +111,7 @@ jobs:
       TRACE_CAPTURE_BASE_DIR: ".trace-captures"
       TRACE_CAPTURE_FILE: ".trace-captures/${{ inputs.job-name }}"
       TRACE_CAPTURE_LOG: ".trace-captures/output.log"
+      BRANCH : ${{ inputs.branch }}
 
     steps:
     - name: Set up Windows
@@ -116,6 +121,8 @@ jobs:
         diskperf -y
 
     - uses: actions/checkout@v4
+      with:
+        ref: "${{ env.BRANCH}}"
 
     - name: Set up Python 2.7
       if: inputs.test-py2
