--- a/.github/workflows/nightly-py2.yml
+++ b/.github/workflows/nightly-py2.yml
@@ -2,7 +2,8 @@ name: Nightly Python 2 tests
 
 on:
   schedule:
-  - cron: "0 4 * * *"  # 4 AM UTC
+  # 4 AM UTC
+  - cron: "0 4 * * *"
 
 jobs:
   test:
@@ -14,7 +15,6 @@ jobs:
       standard: true
       test-py2: true
       test-py3: false
-      branch: "agent-v6"
     secrets: inherit
 
   submit-traces:
