--- a/fly_io/assets/configuration/spec.yaml
+++ b/fly_io/assets/configuration/spec.yaml
@@ -4,7 +4,24 @@ files:
   options:
   - template: init_config
     options:
-    - template: init_config/default
+    - template: init_config/openmetrics
   - template: instances
     options:
-    - template: instances/default
+    - template: instances/openmetrics
+      overrides:
+        openmetrics_endpoint.required: false
+        openmetrics_endpoint.hidden: false
+        openmetrics_endpoint.display_priority: 2
+        openmetrics_endpoint.value.example: http://api.fly.io/prometheus/<ORG_NAME>/federate
+        openmetrics_endpoint.description: |
+          Fly.io's managed Prometheus endpoint. Replace <ORG_NAME> with your organization's name
+    - name: access_token
+      display_priority: 1
+      description: |
+        Fly.io access token. Used for authentication for both the openmetrics endpoint and REST API.
+        You can create one with the command:
+          `TOKEN=$(flyctl auth token)`
+      value:
+        display_default: null
+        example: <ACCESS_TOKEN>
+        type: string
