--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,10 +51,8 @@ trigger-agent-build:
   image: $VALIDATE_AGENT_BUILD
   # Exclude release branches without dependency change
   rules:
-    - if: ($CI_COMMIT_BRANCH =~ /^7.[0-9]{2}.x/)
-      changes:
-        - .deps/*
-      when: always
+    - if: $CI_COMMIT_TAG
+      when: never
     - if: ($CI_COMMIT_BRANCH !~ /^7.[0-9]{2}.x/)
       when: always
   cache:
