process signature for kube-ca

--- a/kubernetes_cluster_autoscaler/manifest.json
+++ b/kubernetes_cluster_autoscaler/manifest.json
@@ -38,8 +38,11 @@
       },
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
-      }
-    },
+      },
+    "process_signatures": [
+      "cluster-autoscaler"
+    ]
+  },
     "dashboards": {
       "Kubernetes Cluster Autoscaler Overview": "assets/dashboards/kubernetes_cluster_autoscaler_overview.json"
     },
