--- a/cisco_aci/datadog_checks/cisco_aci/data/conf.yaml.example
+++ b/cisco_aci/datadog_checks/cisco_aci/data/conf.yaml.example
@@ -125,7 +125,8 @@ instances:
     # appcenter: false
 
     ## @param namespace - string - optional - default: default
-    ## Namespace to be used for devices, interfaces, metrics. If none is specified, will use 'default'.
+    ## Namespace for differentiating between devices that share the same IP.
+    ## If not specified, the namespace will be 'default'.
     #
     # namespace: default
 
