--- a/sqlserver/datadog_checks/sqlserver/data/conf.yaml.example
+++ b/sqlserver/datadog_checks/sqlserver/data/conf.yaml.example
@@ -361,29 +361,6 @@ instances:
         #
         # collection_interval: 10
 
-    ## Configure collection of database schemas
-    #
-    ## schemas_collection
-
-        ## @param enabled - boolean - optional - default: true 
-        ## Enable collection of schemas. Requires `dbm: true`. If `database_autodiscovery` is not enabled,
-        ## data is collected only for the database configured with `database` parameter.
-        #
-        # enabled: false
-
-        ## @param collection_interval - number - optional - default: 600
-        ## Set the database schema collection interval (in seconds).        
-        ## If a non-default value is chosen, then that exact same value must be used for *every* check instance.
-        ## Running different instances with different collection intervals is not supported.
-        #
-        # collection_interval: 600
-
-        ## @param max_execution_time - number - optional - default: 10
-        ## Set the maximum time for schema collection (in seconds).
-        ## Capped by `collection_interval`.
-        #
-        # max_execution_time: 10
-
     ## @param stored_procedure_characters_limit - integer - optional - default: 500
     ## Limit the number of characters of the text of a stored procedure that is collected.
     ## The characters limit is applicable to both query metrics and query samples.
@@ -681,6 +658,27 @@ instances:
     ## If the DB specified doesn't exist on the server then don't do the check
     #
     # ignore_missing_database: false
+
+    ## Configure collection of schemas. If `database_autodiscovery` is not enabled, data is collected 
+    ## only for the database configured with `database` parameter.
+    #
+    # schemas_collection:
+
+        ## @param enabled - boolean - optional - default: false
+        ## Enable schema collection. Requires `dbm: true`. Defaults to false.
+        #
+        # enabled: false
+
+        ## @param collection_interval - number - optional - default: 600
+        ## Set the database schema collection interval (in seconds). Defaults to 600 seconds.
+        #
+        # collection_interval: 600
+
+        ## @param max_execution_time - number - optional - default: 10
+        ## Set the maximum time for schema collection (in seconds). Defaults to 10 seconds. 
+        ## Capped by `schemas_collection.collection_interval`
+        #
+        # max_execution_time: 10
 
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
