--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -120,7 +120,7 @@ datadog-nfsstat==1.13.0; sys_platform == 'linux2'
 datadog-nginx-ingress-controller==2.6.1
 datadog-nginx==6.3.1
 datadog-nvidia-triton==1.2.1
-datadog-openldap==1.12.0
+datadog-openldap==1.12.1-beta.0
 datadog-openmetrics==4.2.1
 datadog-openstack-controller==6.6.0
 datadog-openstack==2.0.0
