--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -296,7 +296,7 @@ files:
         description: |
           The events that should be collected by the vSphere integration.
 
-          Each event is an object represented with the event name itself as a key.
+          Each event is an object represented with the "event" itself as a key.
           However, while the keys should be events to include, the value should be an
           array of message regexes to exclude/filter out. For example, if the key
           is 'AlarmStatusChangedEvent' and the values for this key are 'Gray to Green' and 'Green to Gray',
