--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -296,9 +296,8 @@ files:
         description: |
           The events that should be collected by the vSphere integration.
 
-          Each event is an object represented with the "event" itself as a key.
-          However, while the keys should be events to include, the value should be an
-          array of message regexes to exclude/filter out. For example, if the key
+          The "event" specifies the event type you want to include, and the "excluded_messages" is a list of
+          messages of that event type you do not want to collect. For example, if the key
           is 'AlarmStatusChangedEvent' and the values for this key are 'Gray to Green' and 'Green to Gray',
           then all events named 'AlarmStatusChangedEvent' that don't have the message 'Gray to Green'
           and 'Green to Gray' will be included.
