--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,7 +13,6 @@ conf.yaml.default     @DataDog/documentation @DataDog/agent-integrations @DataDo
 auto_conf.yaml        @DataDog/documentation @DataDog/agent-integrations @DataDog/container-integrations
 manifest.json         @DataDog/documentation @DataDog/agent-integrations
 **/assets             @DataDog/documentation @DataDog/agent-integrations
-**/assets/logs        @DataDog/logs-backend
 
 
 # Dependencies
@@ -249,3 +248,7 @@ docs/developer/process/integration-release.md                         @DataDog/s
 # Dev container
 /.devcontainer/                                                        @DataDog/agent-integrations @DataDog/container-integrations
 /.devcontainer/dbm                                                     @DataDog/database-monitoring-agent
+
+# LEAVE THE FOLLOWING LOG OWNERSHIP LAST IN THE FILE
+# Make sure logs team is the full owner for all logs related files
+**/assets/logs/                          @DataDog/logs-backend
