Update ddev validate ci to accept pytest-args for integrations-core

--- a/.github/workflows/test-target.yml
+++ b/.github/workflows/test-target.yml
@@ -77,7 +77,7 @@ on:
         required: false
         default: ""
         type: string
-      pytest_args:
+      pytest-args:
         description: "Arguments to pass to pytest"
         required: false
         type: string
