--- a/.github/workflows/flaky-tests.yml
+++ b/.github/workflows/flaky-tests.yml
@@ -19,7 +19,13 @@ jobs:
 
       # Options
       standard: true
-      pytest-args: '-m "flaky"'
+      # Because -m starts with a dash, 
+      # click (the library used to build the CLI) will 
+      # interpret it as an option, not as an argument.
+      # To avoid this, using -- syntax, 
+      # which tells the command that everything following it 
+      # should be treated as positional arguments, not options
+      pytest-args: '-- -m flaky'
     secrets: inherit
 
   publish-test-results:
