--- a/kafka/manifest.json
+++ b/kafka/manifest.json
@@ -34,7 +34,7 @@
         "url": "https://www.datadoghq.com/blog/monitor-kafka-with-datadog"
       },
       {
-        "resource_type": "other",
+        "resource_type": "learning_center",
         "url": "https://www.datadoghq.com/knowledge-center/apache-kafka/"
       }
     ]
