--- a/openai/manifest.json
+++ b/openai/manifest.json
@@ -48,7 +48,7 @@
         "url": "https://www.datadoghq.com/blog/monitor-azure-openai-with-datadog/"
       },
       {
-        "resource_type": "other",
+        "resource_type": "product_page",
         "url": "https://app.datadoghq.com/monitors/recommended?q=integration%3AOpenAI&only_installed=false&p=1"
       }
     ]
