--- a/snmp/manifest.json
+++ b/snmp/manifest.json
@@ -25,7 +25,7 @@
         "url": "https://www.datadoghq.com/blog/monitor-snmp-with-datadog/"
       },
       {
-        "resource_type": "other",
+        "resource_type": "guide",
         "url": "https://datadoghq.dev/integrations-core/tutorials/snmp/introduction/"
       }
     ]
