--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,4 +15,11 @@ jobs:
     uses: ./.github/workflows/pr-test.yml
     with:
       repo: core
+      # Because -m starts with a dash, 
+      # click (the library used to build the CLI) will 
+      # interpret it as an option, not as an argument.
+      # To avoid this, using -- syntax, 
+      # which tells the command that everything following it 
+      # should be treated as positional arguments, not options
+      pytest-args: '-- -m flaky'
     secrets: inherit
