Configure different args for unit/integration and e2e tests

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,7 +25,7 @@ jobs:
       # To avoid this, using -- syntax, 
       # which tells the command that everything following it 
       # should be treated as positional arguments, not options
-      pytest-args: '-- -m "not flaky"'
+      pytest-args: '-m "not flaky"'
     secrets: inherit
 
   publish-test-results:
