--- a/voltdb/manifest.json
+++ b/voltdb/manifest.json
@@ -20,15 +20,15 @@
     ],
     "resources": [
       {
-        "resource_type": "docs",
+        "resource_type": "documentation",
         "url": "https://docs.datadoghq.com/agent/kubernetes/integrations/"
       },
       {
-        "resource_type": "docs",
+        "resource_type": "documentation",
         "url": "https://docs.datadoghq.com/agent/kubernetes/log/"
       },
       {
-        "resource_type": "docs",
+        "resource_type": "documentation",
         "url": "https://docs.datadoghq.com/agent/guide/agent-commands/"
       }
     ]
