adding resources and events to filter

--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -288,6 +288,8 @@ files:
             - 'datastore'
             - 'datacenter'
             - 'cluster'
+            - 'storage_pod'
+            - 'vcenter_object_manager'
           type: array
           display_default: ['vm', 'host']
           items:
