add process signature for traefik_mesh

--- a/traefik_mesh/manifest.json
+++ b/traefik_mesh/manifest.json
@@ -38,6 +38,10 @@
         "check": "traefik_mesh.entrypoint.open_connections",
         "metadata_path": "metadata.csv"
       },
+      "process_signatures": [
+        "traefik",
+        "traefik-mesh"
+      ],
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
       }
