--- a/.codecov.yml
+++ b/.codecov.yml
@@ -678,6 +678,10 @@ coverage:
         target: 75
         flags:
         - fluxcd
+      kyverno:
+        target: 75
+        flags:
+        - kyverno
       vSphere:
         target: 75
         flags:
@@ -1124,6 +1128,11 @@ flags:
     paths:
     - kyototycoon/datadog_checks/kyototycoon
     - kyototycoon/tests
+  kyverno:
+    carryforward: true
+    paths:
+    - kyverno/datadog_checks/kyverno
+    - kyverno/tests
   lighttpd:
     carryforward: true
     paths:
