--- a/vllm/manifest.json
+++ b/vllm/manifest.json
@@ -39,6 +39,9 @@
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
       }
+    },
+    "monitors": {
+        "token_throughput": "assets/monitors/token_throughput.json"
     }
   },
   "author": {
