--- a/fly_io/datadog_checks/fly_io/data/conf.yaml.example
+++ b/fly_io/datadog_checks/fly_io/data/conf.yaml.example
@@ -45,18 +45,68 @@ init_config:
 #
 instances:
 
-  -
-    ## @param openmetrics_endpoint - string - optional - default: http://api.fly.io/prometheus/<ORG_NAME>/federate
-    ## Fly.io's managed Prometheus endpoint. Replace <ORG_NAME> with your organization's name
+    ## @param org_slug - string - required
+    ## Fly.io org slug
+    ## For more information see: https://fly.io/docs/flyctl/orgs/
     #
-    # openmetrics_endpoint: http://api.fly.io/prometheus/<ORG_NAME>/federate
+  - org_slug: <ORG_SLUG>
 
-    ## @param access_token - string - optional
-    ## Fly.io access token. Used for authentication for both the openmetrics endpoint and REST API.
-    ## You can create one with the command:
+    ## @param headers - mapping - optional
+    ## Headers to use for every request. An Authorization header including the Fly.io access token is required
+    ## for authentication for both the openmetrics endpoint and REST API.
+    ## You can alternatively use the `auth_token` option.
+    ##
+    ## You can create an access token with the command:
     ##   `TOKEN=$(flyctl auth token)`
     #
-    # access_token: <ACCESS_TOKEN>
+    headers:
+      Authorization: Bearer <FLY_ACCESS_TOKEN>
+
+    ## @param auth_token - mapping - optional
+    ## This allows for the use of authentication information from dynamic sources.
+    ## Both a reader and writer must be configured.
+    ##
+    ## The available readers are:
+    ##
+    ##   - type: file
+    ##     path (required): The absolute path for the file to read from.
+    ##     pattern: A regular expression pattern with a single capture group used to find the
+    ##              token rather than using the entire file, for example: Your secret is (.+)
+    ##   - type: oauth
+    ##     url (required): The token endpoint.
+    ##     client_id (required): The client identifier.
+    ##     client_secret (required): The client secret.
+    ##     basic_auth: Whether the provider expects credentials to be transmitted in
+    ##                 an HTTP Basic Auth header. The default is: false
+    ##     options: Mapping of additional options to pass to the provider, such as the audience
+    ##              or the scope. For example:
+    ##                 options:
+    ##                   audience: https://example.com
+    ##                   scope: read:example
+    ##
+    ## The available writers are:
+    ##
+    ##   - type: header
+    ##     name (required): The name of the field, for example: Authorization
+    ##     value: The template value, for example `Bearer <TOKEN>`. The default is: <TOKEN>
+    ##     placeholder: The substring in `value` to replace with the token, defaults to: <TOKEN>
+    #
+    # auth_token:
+    #   reader:
+    #     type: <READER_TYPE>
+    #     <OPTION_1>: <VALUE_1>
+    #     <OPTION_2>: <VALUE_2>
+    #   writer:
+    #     type: <WRITER_TYPE>
+    #     <OPTION_1>: <VALUE_1>
+    #     <OPTION_2>: <VALUE_2>
+
+    ## @param match_string - string - optional - default: {__name__=~".+"}
+    ## Match string used to filter the Prometheus data requested from Fly.io.
+    ## For more information, see: https://prometheus.io/docs/prometheus/latest/federation/#configuring-federation
+    ## By default, we fetch everything.
+    #
+    # match_string: '{__name__=~"example_app"}'
 
     ## @param raw_metric_prefix - string - optional
     ## A prefix that is removed from all exposed metric names, if present.
@@ -419,45 +469,6 @@ instances:
     #
     # kerberos_keytab: <KEYTAB_FILE_PATH>
 
-    ## @param auth_token - mapping - optional
-    ## This allows for the use of authentication information from dynamic sources.
-    ## Both a reader and writer must be configured.
-    ##
-    ## The available readers are:
-    ##
-    ##   - type: file
-    ##     path (required): The absolute path for the file to read from.
-    ##     pattern: A regular expression pattern with a single capture group used to find the
-    ##              token rather than using the entire file, for example: Your secret is (.+)
-    ##   - type: oauth
-    ##     url (required): The token endpoint.
-    ##     client_id (required): The client identifier.
-    ##     client_secret (required): The client secret.
-    ##     basic_auth: Whether the provider expects credentials to be transmitted in
-    ##                 an HTTP Basic Auth header. The default is: false
-    ##     options: Mapping of additional options to pass to the provider, such as the audience
-    ##              or the scope. For example:
-    ##                 options:
-    ##                   audience: https://example.com
-    ##                   scope: read:example
-    ##
-    ## The available writers are:
-    ##
-    ##   - type: header
-    ##     name (required): The name of the field, for example: Authorization
-    ##     value: The template value, for example `Bearer <TOKEN>`. The default is: <TOKEN>
-    ##     placeholder: The substring in `value` to replace with the token, defaults to: <TOKEN>
-    #
-    # auth_token:
-    #   reader:
-    #     type: <READER_TYPE>
-    #     <OPTION_1>: <VALUE_1>
-    #     <OPTION_2>: <VALUE_2>
-    #   writer:
-    #     type: <WRITER_TYPE>
-    #     <OPTION_1>: <VALUE_1>
-    #     <OPTION_2>: <VALUE_2>
-
     ## @param aws_region - string - optional
     ## If your services require AWS Signature Version 4 signing, set the region.
     ##
@@ -536,17 +547,6 @@ instances:
     #   - SSLv3
     #   - TLSv1.2
     #   - TLSv1.3
-
-    ## @param headers - mapping - optional
-    ## The headers parameter allows you to send specific headers with every request.
-    ## You can use it for explicitly specifying the host header or adding headers for
-    ## authorization purposes.
-    ##
-    ## This overrides any default headers.
-    #
-    # headers:
-    #   Host: <ALTERNATIVE_HOSTNAME>
-    #   X-Auth-Token: <AUTH_TOKEN>
 
     ## @param extra_headers - mapping - optional
     ## Additional headers to send with every request.
