Update image extention and added public ip in sample logs

--- a/ping_one/manifest.json
+++ b/ping_one/manifest.json
@@ -13,7 +13,7 @@
         "media": [
             {
                 "caption": "PingOne",
-                "image_url": "images/ping_one.jpeg",
+                "image_url": "images/ping_one.png",
                 "media_type": "image"
             }
         ],
