--- a/mongo/assets/configuration/spec.yaml
+++ b/mongo/assets/configuration/spec.yaml
@@ -284,6 +284,9 @@ files:
          * `db:<DB_NAME>` e.g. `db:<DB_NAME>`
          * `collection:<COLLECTION_NAME>` e.g. `collection:<COLLECTION_NAME>`
         Each collection generates many metrics, up to 8 + the number of indices on the collection for each collection.
+
+        NOTE: This option is ignored when database_autodiscovery is enabled. 
+        Metrics are collected for all authorized collections on autodiscovered databases.
       value:
         type: array
         items:
