add impact to token throughput monitor and a new latency monitor

--- a/vllm/manifest.json
+++ b/vllm/manifest.json
@@ -41,7 +41,8 @@
       }
     },
     "monitors": {
-        "token_throughput": "assets/monitors/token_throughput.json"
+        "token_throughput": "assets/monitors/token_throughput.json",
+        "latency": "assets/monitors/latency.json"
     }
   },
   "author": {
